--- a/client/src/components/app.css
+++ b/client/src/components/app.css
@@ -1,3 +1,7 @@
+.body {
+    max-height: 100vh;
+}
+
 .envelopes {
     position: relative;
 }
@@ -26,7 +30,6 @@
 
 
 .area{
-    background: rgba(214, 155, 155, 0.637);  
     background: -webkit-linear-gradient(to left, #8f94fb, rgba(214, 155, 155, 0.637));  
     width: 100%;
     height:100vh;
@@ -154,3 +157,41 @@
     background-color: rgba(214, 155, 155, 0.637);
     clip-path: polygon(1% 25%, 100% 0%, 100% 75%, 0% 100%);
 }
+
+.enter-btn {
+    background-color: black !important;
+    color: white !important;
+    border-radius: 999px !important;
+    height: 44px;
+    width: 244px !important;
+}
+body {
+    font-family: "Archivo Black", sans-serif;
+  }
+  
+  .hero-img {
+    width: 100%;
+    display: block;
+    visibility: hidden;
+  }
+  
+  .hero-title {
+    position: fixed;
+    top: 20%;
+    left: 100%;
+    font-size: 25em;
+    user-select: none;
+  }
+  
+  .hero-cta {
+    position: fixed;
+    left: 50%;
+    bottom: 0;
+    font-size: 12px;
+    transform: translateX(-50%);
+    text-transform: uppercase;
+    padding: 18px 30px;
+    background-color: rgb(22, 2, 2);
+    color: rgb(233, 223, 223);
+    font-family: 'Arial';
+  }
