--- a/client/src/components/views/Envelope/envlope.css
+++ b/client/src/components/views/Envelope/envlope.css
@@ -2,8 +2,9 @@
     z-index: 1002;
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
     position: relative;
-    padding: 0px;
+    padding: 4px 0;
     padding-left: 0px !important;
     transition: all .2s ease-in-out;
     cursor: pointer;
